<resources>
    <string name="app_name">Sites</string>
    <string name="action_settings">Settings</string>
    <string name="germany">Germany</string>
    <string name="poland">Poland</string>
    <string name="denmark">Denmark</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="hungary">Hungary</string>
    <string name="singapore">Singapore</string>
    <string name="philippines">Philippines</string>
    <string name="title_activity_germany_cities">GermanyCities</string>
    <string name="berlin">Berlin</string>
    <string name="cologne">Cologne</string>
    <string name="dauchau">Dauchau</string>
    <string name="dresden">Dresden</string>
    <string name="hamburg">Hamburg</string>
    <string name="leipzig">Leipzig</string>
    <string name="mosel_country">Mosel Country</string>
    <string name="munich">Munich</string>
    <string name="potsdam">Potsdam</string>
    <string name="rhine">Rhine Area</string>
    <string name="rothenburg">Rothenburg</string>
    <string name="swiss_alps">Swiss Alps</string>
    <string name="wittenberg">Wittenberg</string>
    <string name="title_activity_austrian_cities">AustrianCities</string>
    <string name="salzburg">Salzburg</string>
    <string name="austria">Austria</string>
    <string name="title_activity_czech_cities">CzechCities</string>
    <string name="prague">Prague</string>
    <string name="title_activity_danish_cities">DanishCities</string>
    <string name="aarhus">Aarhus</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="herning">Herning</string>
    <string name="title_activity_hungarian_cities">HungarianCities</string>
    <string name="budapest">Budapest</string>
    <string name="lake_balaton">Lake Balaton</string>
    <string name="title_activity_polish_cities">PolishCities</string>
    <string name="auschwitz">Auschwitz</string>
    <string name="krakow">Krakow</string>
    <string name="warsaw">Warsaw</string>
    <string name="title_activity_filipino_cities">FilipinoCities</string>
    <string name="manila">Manila</string>
    <string name="title_activity_singaporean_cities">SingaporeanCities</string>
    <string name="any">Any</string>
    <string name="title_activity_salzburg_sites">Salzburg Sites</string>
    <string name="festung">Festung Hohensalzburg</string>
    <string name="wolfgangsee">Lake Wolfgangsee</string>
    <string name="mirabel_palace">Mirabel Palace</string>
    <string name="mirabel_gardens">Mirabel Gardens</string>
    <string name="mozart_square">Mozart Square</string>
    <string name="mozart_wohnhaus">Mozart-Wohnhaus</string>
    <string name="mozart_geburtshaus">Mozart Geburtshaus</string>
    <string name="salzburg_museum">Salzburg Museum</string>
    <string name="untersberg">Untersberg</string>
    <string name="title_activity_berlin_sites">Berlin Sites</string>
    <string name="title_activity_cologne_sites">Cologne Sites</string>
    <string name="title_activity_dauchau_sites">Dauchau Sites</string>
    <string name="dauchau_prison">Dauchau Prison</string>
    <string name="cologne_cathedral">Cologne Cathedral</string>
    <string name="berlin_wall">Berlin Wall</string>
    <string name="brandenburg_gate">Brandenburg Gate</string>
    <string name="checkpoint_charlie">Checkpoint Charlie</string>
    <string name="holocaust_memorial">Holocaust Memorial</string>
    <string name="museum_island">Museum Island</string>
    <string name="reichstag">Reichstag</string>
    <string name="tiergarten">Tiergarten</string>
    <string name="title_activity_mosel_area">Mosel Area</string>
    <string name="title_activity_rhine_area_sites">Rhine Area Sites</string>
    <string name="callenberg_castle">Callenberg Castle</string>
    <string name="castles">Castles</string>
    <string name="burg_eltz">Burg Eltz</string>
    <string name="rheinfels_castle">Rheinfels Castle</string>
    <string name="veste_coburg">Veste Coburg</string>
    <string name="title_activity_dresden_sites">Dresden Sites</string>
    <string name="green_vault">Historic Green Vault</string>
    <string name="other">Other</string>
    <string name="title_activity_other_germany_sites">Other Germany Sites</string>
    <string name="wartburg_castle">Warburg Castle (Eisenach, Germany)</string>
    <string name="fussen">Fussen</string>
    <string name="title_activity_fussen_sites">Fussen Sites</string>
    <string name="neuschwanstein_castle">Neuschwanstein Castle</string>
    <string name="hohenschwangau_castle">Hohenschwangau Castle</string>
    <string name="title_activity_munich_sites">Munich Sites</string>
    <string name="bmw_museum">BMW Welt and Museum</string>
    <string name="hofbrauhaus">Hofbrauhaus</string>
    <string name="marieplatz">Marienplatz</string>
    <string name="munich_residenz">Munich Residenz</string>
    <string name="title_activity_potsdam_sites">Potsdam Sites</string>
    <string name="title_activity_wittenberg_sites">Wittenberg Sites</string>
    <string name="luthers_home">Luther\'s Home</string>
    <string name="title_activity_hamburg_sites">Hamburg Sites</string>
    <string name="title_activity_leipzig_sites">Leipzig Sites</string>
    <string name="title_activity_mosel_country_sites">Mosel Country Sites</string>
    <string name="title_activity_rothenberg_sites">Rothenberg Sites</string>
    <string name="title_activity_swiss_alps_sites">Swiss Alps Sites</string>
    <string name="title_activity_auschwitz_sites">Auschwitz Sites</string>
    <string name="title_activity_krakow_sites">Krakow Sites</string>
    <string name="ojcow">Ojcow National Park</string>
    <string name="pieniny">Pieniny</string>
    <string name="salt_mine">Salt Mine</string>
    <string name="tatry">Tatry</string>
    <string name="title_activity_warsaw_sites">Warsaw Sites</string>
</resources>
