<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.burditt.jonathan.sites.GermanyCities"
    tools:showIn="@layout/activity_germany_cities"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/berlin"
        android:id="@+id/berlinTextView"
        android:onClick="onClickBerlin"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cologne"
        android:id="@+id/cologneTextView"
        android:onClick="onClickCologne"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dauchau"
        android:id="@+id/dauchauTextView"
        android:onClick="onClickDauchau"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dresden"
        android:id="@+id/dresdenTextView"
        android:onClick="onClickDresden"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fussen"
        android:id="@+id/fussenTextView"
        android:onClick="onClickFussen"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hamburg"
        android:id="@+id/hamburgTextView"
        android:onClick="onClickHamburg"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/leipzig"
        android:id="@+id/leipzigTextView"
        android:onClick="onClickLeipzig"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mosel_country"
        android:id="@+id/moselCountryTextView"
        android:onClick="onClickMoselCountry"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/munich"
        android:id="@+id/munichTextVIew"
        android:onClick="onClickMunich"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/potsdam"
        android:id="@+id/potsdamTextView"
        android:onClick="onClickPotsdam"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rhine"
        android:id="@+id/rhineAreaTextView"
        android:onClick="onClickRhineArea"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rothenburg"
        android:id="@+id/rothenburgTextVIew"
        android:onClick="onClickRothenburg"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/swiss_alps"
        android:id="@+id/swissAlpsTextView"
        android:onClick="onClickSwissAlps"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wittenberg"
        android:id="@+id/wittenbergTextView"
        android:onClick="onClickWittenberg"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/other"
        android:id="@+id/otherGermanyTextView"
        android:onClick="onClickOther"
        style="@style/largeTextGray" />

</LinearLayout>
