<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.burditt.jonathan.sites.SalzburgSites"
    tools:showIn="@layout/activity_salzburg_sites"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/festung"
        android:id="@+id/festungTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wolfgangsee"
        android:id="@+id/wolfgangseeTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mirabel_palace"
        android:id="@+id/mirabelPalaceTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mirabel_gardens"
        android:id="@+id/mirabelGardensTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mozart_square"
        android:id="@+id/mozartSquareTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mozart_wohnhaus"
        android:id="@+id/mozartWohnhausTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mozart_geburtshaus"
        android:id="@+id/mozartsGeburtshausTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/salzburg_museum"
        android:id="@+id/salzburgMuseumTextView"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/untersberg"
        android:id="@+id/untersbergTextView"
        style="@style/largeTextGray" />
</LinearLayout>
