<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.burditt.jonathan.sites.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/austria"
        android:id="@+id/austriaTextView"
        android:onClick="onClickAustria"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/czech_republic"
        android:id="@+id/czechTextView"
        android:layout_gravity="left"
        android:onClick="onClickCzech"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/denmark"
        android:id="@+id/denmarkTextView"
        android:layout_gravity="left"
        android:onClick="onClickDenmark"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/germany"
        android:id="@+id/germanyTextView"
        android:layout_gravity="left"
        android:onClick="onClickGermany"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hungary"
        android:id="@+id/hungaryTextView"
        android:layout_gravity="left"
        android:onClick="onClickHungary"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/philippines"
        android:id="@+id/philippinesTextView"
        android:layout_gravity="left"
        android:onClick="onClickPhilippines"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/poland"
        android:id="@+id/polandTextView"
        android:layout_gravity="left"
        android:onClick="onClickPoland"
        style="@style/largeTextGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/singapore"
        android:id="@+id/singaporeTextView"
        android:layout_gravity="left"
        android:onClick="onClickSingapore"
        style="@style/largeTextGray" />
</LinearLayout>
